@@ -4,6 +4,8 @@
 
 23-Feb-2003
 ~~~~~~~~~~~
+Bugfix: A double-click which starts on one file and ends on another is now
+	ignored (reported by Michael Adams).
 Bugfix: Test for valid sort-type in SOAP call was reserved, so you couldn't set
 	the sort type (reported by Damjan Bole).
 Bugfix: Using a SOAP call to open a non-existant directory made the filer
